# Immersive-Video-Sample

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE.md  README.md
src/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  ReleaseNotes
src/360SCVP/: 360SCVP.pc  360SCVPAPI.h  360SCVPAPIImpl.cpp  360SCVPBitstream.cpp  360SCVPBitstream.h  360SCVPCommonDef.h  360SCVPCubeMap.cpp  360SCVPCubeMap.h  360SCVPEquiRect.cpp  360SCVPEquiRect.h  360SCVPGeometry.cpp  360SCVPGeometry.h  360SCVPHevcEncHdr.cpp  360SCVPHevcEncHdr.h  360SCVPHevcParser.cpp  360SCVPHevcParser.h  360SCVPHevcTileMerge.cpp  360SCVPHevcTileMerge.h  360SCVPHevcTilestream.cpp  360SCVPHevcTilestream.h  360SCVPImpl.cpp  360SCVPImpl.h  360SCVPLog.cpp  360SCVPLog.h  360SCVPMergeStreamAPI.h  360SCVPTiledstreamAPI.h  360SCVPViewPort.cpp  360SCVPViewPort.h  360SCVPViewportAPI.h  360SCVPViewportImpl.cpp  360SCVPViewportImpl.h  BUILD.gn  CMakeLists.txt  Doxyfile
src/360SCVP/safestringlib/: safe_mem_lib.h
src/360SCVP/test/: compile.sh  paras.txt  test.265  test.h265  testCube.265  testCube_low.265  testI360SCVP.cpp  testI360SCVP_common.cpp  testI360SCVP_cubemap.cpp  testI360SCVP_erp.cpp  testI360SCVP_novelview.cpp  testI360SCVP_rotationConvert.cpp  testI360SCVP_xmlParsing.cpp  test_low.265
src/CDNTools/ClientSimulator/: CMakeLists.txt  ClientSimulator.cpp  KeyEvent.h  README.md  run.sh  sync_time.sh
src/JNIOmafDashAccess/: README.md  local.properties  settings.gradle
src/JNIOmafDashAccess/app/: build.gradle
src/JNIOmafDashAccess/omafdashaccesslibrary/: build.gradle
src/OmafDashAccess/: CMakeLists.txt  CmafSegment.cpp  CmafSegment.h  DownloadManager.cpp  DownloadManager.h  Doxyfile  MediaPacket.h  OmafAdaptationSet.cpp  OmafAdaptationSet.h  OmafDashAccess.pc  OmafDashAccessApi.h  OmafDashAccessApi_impl.cpp  OmafDashAccessLog.cpp  OmafDashAccessLog.h  OmafDashRangeSync.cpp  OmafDashRangeSync.h  OmafDashSource.cpp  OmafDashSource.h  OmafExtractor.cpp  OmafExtractor.h  OmafExtractorSelector.cpp  OmafExtractorSelector.h  OmafExtractorTracksSelector.cpp  OmafExtractorTracksSelector.h  OmafMP4VRReader.cpp  OmafMP4VRReader.h  OmafMPDParser.cpp  OmafMPDParser.h  OmafMediaSource.h  OmafMediaStream.cpp  OmafMediaStream.h  OmafReader.h  OmafReaderManager.cpp  OmafReaderManager.h  OmafSegment.cpp  OmafSegment.h  OmafTileTracksSelector.cpp  OmafTileTracksSelector.h  OmafTilesStitch.cpp  OmafTilesStitch.h  (+9 more)
src/OmafDashAccess/OmafDashDownload/: OmafCurlDownloader.cpp  OmafCurlDownloader.h  OmafCurlEasyHandler.cpp  OmafCurlEasyHandler.h  OmafCurlMultiHandler.cpp  OmafCurlMultiHandler.h  OmafDownloader.cpp  OmafDownloader.h  OmafDownloaderObserver.h  Stream.cpp  Stream.h  performance.h
src/OmafDashAccess/OmafDashParser/: AdaptationSetElement.cpp  AdaptationSetElement.h  AudioChannelCfgElement.cpp  AudioChannelCfgElement.h  BaseUrlElement.cpp  BaseUrlElement.h  Common.h  DescriptorElement.cpp  DescriptorElement.h  EssentialPropertyElement.cpp  EssentialPropertyElement.h  LatencyElement.cpp  LatencyElement.h  MPDElement.cpp  MPDElement.h  OmafElementBase.cpp  OmafElementBase.h  OmafMPDReader.cpp  OmafMPDReader.h  OmafReaderBase.h  OmafXMLElement.cpp  OmafXMLElement.h  OmafXMLParser.cpp  OmafXMLParser.h  PeriodElement.cpp  PeriodElement.h  ProducerReferenceTimeElement.cpp  ProducerReferenceTimeElement.h  QualityInfoElement.cpp  QualityInfoElement.h  RepresentationElement.h  (+15 more)
src/VROmafPacking/: AudioStream.h  CMakeLists.txt  DashInitSegmenter.cpp  DashSegmenter.cpp  DashSegmenter.h  DefaultSegmentation.cpp  DefaultSegmentation.h  Doxyfile  ExtractorTrack.cpp  ExtractorTrack.h  ExtractorTrackGenerator.cpp  ExtractorTrackGenerator.h  ExtractorTrackManager.cpp  ExtractorTrackManager.h  HevcNaluParser.cpp  HevcNaluParser.h  MediaStream.h  MpdGenerator.cpp  MpdGenerator.h  MultiViewSegmentation.cpp  MultiViewSegmentation.h  NaluParser.h  OmafPackage.cpp  OmafPackage.h  OmafPackingCommon.h  OmafPackingLog.cpp  OmafPackingLog.h  OneVideoExtractorTrackGenerator.cpp  OneVideoExtractorTrackGenerator.h  OneVideoRegionWisePackingGenerator.cpp  OneVideoRegionWisePackingGenerator.h  RegionWisePackingGenerator.cpp  RegionWisePackingGenerator.h  Segmentation.cpp  Segmentation.h  TwoResExtractorTrackGenerator.cpp  TwoResExtractorTrackGenerator.h  TwoResRegionWisePackingGenerator.cpp  TwoResRegionWisePackingGenerator.h  VROmafPacking.pc  (+9 more)
src/doc/: Immersive_Video_Delivery_360SCVP.md  Immersive_Video_Delivery_Architecture.md  Immersive_Video_Delivery_CubemapTransformType.md  Immersive_Video_Delivery_DashAccess.md  Immersive_Video_Delivery_DistributeEncoder.md  Immersive_Video_Delivery_FFmpeg_usage.md  Immersive_Video_Delivery_OMAF_Packing.md  Immersive_Video_Delivery_Plugins.md  Immersive_Video_Delivery_RefPlayer.md  Immersive_Video_Getting_Started_Guide.md  ngnix_setup.md
src/google_test/: compile_gtest.sh
src/isolib/: CMakeLists.txt
src/player/: .gitignore  CMakeLists.txt  Common.h  CubeMapMesh.cpp  CubeMapMesh.h  CubeMapRender.cpp  CubeMapRender.h  DMABufferRenderSource.cpp  DMABufferRenderSource.h  DashMediaSource.cpp  DashMediaSource.h  Doxyfile  EGLRenderContext.cpp  EGLRenderContext.h  ERPMesh.cpp  ERPMesh.h  ERPRender.cpp  ERPRender.h  FFmpegMediaSource.cpp  FFmpegMediaSource.h  GLFWRenderContext.cpp  GLFWRenderContext.h  HWRenderSource.cpp  HWRenderSource.h  MediaPlayer.cpp  MediaPlayer.h  MediaSource.cpp  MediaSource.h  Mesh.cpp  Mesh.h  Player.cpp  Player.h  README.md  README.txt  RegionData.cpp  RegionData.h  Render2TextureMesh.cpp  Render2TextureMesh.h  RenderBackend.cpp  RenderBackend.h  (+23 more)
src/trace/: Bandwidth_tp.c  Bandwidth_tp.h  CMakeLists.txt  E2E_latency_summary.sh  E2E_latency_tp.c  E2E_latency_tp.h  MtHQ_tp.c  MtHQ_tp.h  generate_client_bandwidth_summary.sh  generate_client_mthq_summary.sh  generate_server_bandwidth_summary.sh  start_latency_test.sh
src/utils/: GlogWrapper.h  Log.cpp  Log.h  OmafStructure.h  SafeSysResourceHandle.cpp  SafeSysResourceHandle.h  Singleton.h  Threadable.h  VROmafPacking_data.h  VROmafPacking_def.h  ViewportPredict_API.h  common_data.h  data_type.h  error.h  ns_def.h  pose.h  safe_mem.h
(+567 files in other folders)
