cmake_minimum_required(VERSION 2.8)

option(USE_ANDROID_NDK
      "Use android ndk"
      OFF
)

project(360SCVP)

AUX_SOURCE_DIRECTORY(. DIR_SRC)

SET(DIR_SRC
    ${DIR_SRC}
)

IF(USE_SAFE_MEM)
ADD_DEFINITIONS("-D_SAFE_MEM_")
ENDIF()

if(NOT USE_ANDROID_NDK)
ADD_DEFINITIONS("-z noexecstack -z relro -z now -fstack-protector-strong -fPIE -fPIC -pie -O2 -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security -Wl,-S -Wall -Werror -g -c -fPIC -std=c++11")
else()
ADD_DEFINITIONS("-fPIE -fPIC -O2 -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security -Wall -Werror -g -c -fPIC -std=c++11")
endif()

IF(USE_ANDROID_NDK)
  ADD_DEFINITIONS("-D_ANDROID_NDK_OPTION_")
ENDIF()

INCLUDE_DIRECTORIES(/usr/local/include ./ ../utils ../plugins/360SCVP_Plugins/TileSelection_Plugins)
LINK_DIRECTORIES(/usr/local/lib)

ADD_LIBRARY(360SCVP SHARED  ${DIR_SRC} ../utils/Log.cpp ../utils/tinyxml2.cpp)

if(NOT DEFINED CMAKE_INSTALL_PREFIX OR CMAKE_INSTALL_PREFIX STREQUAL "")
    set(CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "..." FORCE)
endif()
message(STATUS "CMAKE_INSTALL_PREFIX = ${CMAKE_INSTALL_PREFIX}")

if(NOT CMAKE_INSTALL_BINDIR)
    set(CMAKE_INSTALL_BINDIR "bin")
endif()

if(NOT DEFINED CMAKE_INSTALL_LIBDIR)
    set(CMAKE_INSTALL_LIBDIR "lib")
endif()

if(NOT DEFINED CMAKE_INSTALL_INCLUDEDIR)
    set(CMAKE_INSTALL_INCLUDEDIR "include")
endif()

TARGET_LINK_LIBRARIES(360SCVP glog)
TARGET_LINK_LIBRARIES(360SCVP dl)
IF(USE_SAFE_MEM)
TARGET_LINK_LIBRARIES(360SCVP safestring_shared)
ENDIF()

install(TARGETS 360SCVP
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}")

INSTALL(FILES ${PROJECT_SOURCE_DIR}/../utils/error.h DESTINATION  "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(FILES ${PROJECT_SOURCE_DIR}/../utils/common_data.h DESTINATION  "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(FILES ${PROJECT_SOURCE_DIR}/../utils/Log.h DESTINATION  "${CMAKE_INSTALL_INCLUDEDIR}")
INSTALL(FILES ${PROJECT_SOURCE_DIR}/../utils/pose.h DESTINATION  "${CMAKE_INSTALL_INCLUDEDIR}")
install(FILES ${PROJECT_SOURCE_DIR}/360SCVPAPI.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
install(FILES ${PROJECT_SOURCE_DIR}/360SCVPViewportAPI.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
install(FILES ${PROJECT_SOURCE_DIR}/360SCVP.pc DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig")
