CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(dashparser)

AUX_SOURCE_DIRECTORY(../atoms DIR_DASHPARSER_SRCS)
AUX_SOURCE_DIRECTORY(. DIR_DASHPARSER_SRCS)

ADD_DEFINITIONS("-g -c -fPIC -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0")

INCLUDE_DIRECTORIES(/usr/local/include ../include ../atoms)

LINK_DIRECTORIES(/usr/local/lib ../atoms)

ADD_LIBRARY(dashparser STATIC ${DIR_DASHPARSER_SRCS})

TARGET_LINK_LIBRARIES(dashparser glog)
